--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "concurrently": "^8.0.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.414.0",
     "next": "^14.2.5",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.13.0-alpha.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "20.2.4",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
